// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InvoiceLifecycleActions snapshot tests matches snapshot for draft invoice 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": 8,
      "padding": 16,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#3b82f6",
        "borderRadius": 8,
        "justifyContent": "center",
        "minWidth": 100,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
    >
      Issue
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ef4444",
        "borderRadius": 8,
        "justifyContent": "center",
        "minWidth": 100,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
    >
      Cancel
    </Text>
  </View>
</View>
`;

exports[`InvoiceLifecycleActions snapshot tests matches snapshot for issued invoice 1`] = `
<View
  style={
    {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "gap": 8,
      "padding": 16,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#22c55e",
        "borderRadius": 8,
        "justifyContent": "center",
        "minWidth": 100,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
    >
      Mark Paid
    </Text>
  </View>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#ef4444",
        "borderRadius": 8,
        "justifyContent": "center",
        "minWidth": 100,
        "opacity": 1,
        "paddingHorizontal": 16,
        "paddingVertical": 10,
      }
    }
  >
    <Text
      style={
        {
          "color": "#ffffff",
          "fontSize": 14,
          "fontWeight": "600",
        }
      }
    >
      Cancel
    </Text>
  </View>
</View>
`;
